formatting and visibility fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,7 @@ input, select, textarea {
 	appearance: none;
 }
 
+
 /* Basic */
 
 	html {
@@ -227,6 +228,9 @@ input, select, textarea {
 		margin: 0 auto;
 		max-width: calc(100% - 50px);
 		width: 1200px;
+		background-color: rgba(255, 255, 255, 0.349);
+		border-radius: 30px;
+		padding: 20px;
 	}
 
 		.container.medium {
@@ -1676,14 +1680,14 @@ input, select, textarea {
 		-webkit-appearance: none;
 		position: relative;
 		display: inline-block;
-		color: #fff !important;
+		color: #000000 !important;
 		text-decoration: none;
 		font-weight: 700;
 		border: 0;
 		outline: 0;
 		cursor: pointer;
 		border-radius: 8px;
-		text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
+		text-shadow: 1px 3px 10px #fff;
 		overflow: hidden;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
 		background-color: #43B3E0;
@@ -1914,8 +1918,9 @@ input, select, textarea {
 		background: #43B3E0;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
 		border-radius: 10px;
-		text-align: left;
+		text-align: center;
 		padding: 2em;
+		
 	}
 
 		.box.style1 {
@@ -1995,11 +2000,11 @@ input, select, textarea {
 	}
 
 		.wrapper.style1 {
-			background-image: none;
 			background-image: url(images/IMG_0639.jpg);
 			background-size: 120%;
 			background-position: center;
-			text-shadow: 1px 3px 5px #fff;
+			background-attachment: fixed;
+
 		}
 
 		.wrapper.style2 {
@@ -2008,7 +2013,6 @@ input, select, textarea {
 
 		.wrapper.style3 {
 			background-color: #f4f4f4;
-			text-shadow: 1px 1px 0px #fff;
 		}
 
 		.wrapper.style4 {
@@ -2039,7 +2043,7 @@ input, select, textarea {
 /* Nav */
 
 	#nav {
-		background-color: #282828;
+		background-color: #181818;
 		text-align: center;
 		position: fixed;
 		left: 0;
@@ -2350,7 +2354,7 @@ input, select, textarea {
 
 			.box {
 				padding: 30px 20px 30px 20px;
-				margin: 0 0 20px 0 !important;
+				margin: 0 0 5px 0 !important;
 			}
 
 				.box h3 {
@@ -2380,6 +2384,9 @@ input, select, textarea {
 					max-width: 32em;
 					margin-left: auto !important;
 					margin-right: auto !important;
+					margin-top: auto !important;
+					margin-bottom: auto !important;
+
 				}
 
 		/* Wrappers */
